ql/src/test/results/clientnegative/impala/create_function4.q.out
FAILED: ImpalaParseException Syntax error in line 6:
illegal syntax here
        ^
Encountered: IDENTIFIER
Expected: FROM, LOCATION, TO


